tests/types/errors/fetch_option_type.mochi
let x = fetch "https://example.com" with {"method": 10}
